--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,9 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_gest_participantes">Gestión de Participantes</string>
+    <string name="menu_mis_torneos">Mis Torneos</string>
+    <string name="menu_ajustes">Ajustes</string>
 
     <string name="app_title">Championship Studio</string>
     <string name="login">Login</string>
