--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_sign_out">Sign out</string>
 
     <string name="menu_gest_participantes">Gestión de Participantes</string>
     <string name="menu_mis_torneos">Mis Torneos</string>
