--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
 
     <string name="item_torneo_nparticipantes">Nº Participantes:</string>
     <string name="item_torneo_icon_desc">Tournament Type Icon</string>
-    <string name="item_torneo_edit_button">EDITAR</string>
+    <string name="item_torneo_edit_button">GESTIONAR</string>
     <string name="item_torneo_delete_button">ELIMINAR</string>
 
     <string name="item_jugador_edit_button">EDITAR</string>
